# dotfiles

./: .bashrc  .gitconfig  .gitignore  README.md  install.py  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml
